--- a/ChainInstall/ChainInstall.csproj
+++ b/ChainInstall/ChainInstall.csproj
@@ -8,7 +8,7 @@
     <OutputType>Exe</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
     <RootNamespace>ChainInstall</RootNamespace>
-    <AssemblyName>ChainInstall</AssemblyName>
+    <AssemblyName>CHAIN_INSTALL</AssemblyName>
     <TargetFrameworkVersion>v2.0</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <TargetFrameworkProfile />
